<resources>
    <string name="battery_full">Full</string>
    <string name="battery_middle">Middle</string>
    <string name="battery_weak">Weak</string>
    <string name="battery_charge">Need charging</string>
    <string name="ac_adapter">AC adapter</string>
    <string name="free">Free</string>
    <string name="app_version_production">3.2.1</string>
    <string name="about_text">Ver.3.0.9\n© 2016 Brother Industries, Ltd.\n</string>
    <string name="ErrorMessage_ERROR_NONE">Print Completed</string>
    <string name="progress_dialog_message_preparing_connection">Preparing the connection…</string>
    <string name="progress_dialog_message_createData">Creating the data</string>
    <string name="progress_dialog_message_sendingData">Sending the data…</string>
    <string name="progress_dialog_message_sendingPrintingData">Sending the data…</string>
    <string name="progress_dialog_message_startPrint">Printing the data </string>
    <string name="progress_dialog_message_dataSent">The data was sent </string>
    <string name="progress_dialog_message_printed">The printing process was completed </string>
    <string name="progress_dialog_message_close_connection">Closing the connection</string>
    <string name="progress_dialog_message_set_paper">Please Set Paper</string>
    <string name="progress_dialog_message_cooling_start">Printer cooling start</string>
    <string name="progress_dialog_message_cooling_end">Printer cooling end</string>
    <string name="progress_dialog_message_waiting_peel">Wait for peeling label</string>
    <string name="progress_dialog_message_sending_template">File transferring</string>
    <string name="progress_dialog_message_getting_bluetooth_setting">Getting Bluetooth settings </string>
    <string name="progress_dialog_message_setting_bluetooth_setting">Transferring Bluetooth settings </string>
    <string name="progress_dialog_message_removing_template">Removing templates </string>
    <string name="progress_dialog_message_getting_template">Getting template list </string>
    <string name="error_message_none">Succeeded</string>
    <string name="error_message_runtime">Runtime error occurred </string>
    <string name="printer_model_title">PrinterModel</string>
    <string name="printer_model_value">Select the printer model </string>
    <string name="error_message_weong_os">Android OS is not supported</string>
    <string name="error_message_no_usb">USB device is not found</string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="mac_address_title">MAC address</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="paper_size_title">Paper size</string>
    <string name="paper_size_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string name="trim_tape_after_data_title">Cutting zero lines </string>
    <string name="trim_tape_after_data_value">Select the cutting zero lines</string>
    <string name="tethering_title">Tethering</string>
    <string name="tethering_value">Select the tethering</string>
    <string name="search_printer">Searching…</string>
    <string name="end_title">End</string>
    <string name="end_message">Back to Launcher</string>
    <string name="close_message">Close Application</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="progress_dialog_message_communication_start">Start communication…</string>
    <string name="close_connect">closeing…</string>
    <string name="bluetooth_printer_list_title_label">Bluetooth Printer</string>
    <string name="progress_dialog_message_transfer_start">Transfer Start…</string>
    <string name="folder_name">Folder Name</string>
    <string name="error_input">wrong input</string>
    <string name="msg_title_warning">Warning</string>
    <string name="button_next_print">Next Template</string>
    <string name="template_encoding">Encoding:</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="alertDialogMessage_runtimeError">Runtime error occurred </string>
    <string name="cancel_printer_msg">Is cancelling, please wait</string>
    <string name="please_wait">Please wait...</string>
    <string name="ErrorMessage_WRONG_OS">Android OS is not supported</string>
    <string name="ErrorMessage_NO_USB">USB device is not found</string>
    <string name="app_name">ScanAttendee</string>
    <string name="welcome">Welcome to ScanAttendee</string>
    <string name="paypal_error">Paypal application initialization error, Please try again</string>
    <string name="network_error">You are not connected to any working network, try again</string>
    <string name="connection_error">Connection time out, You are not connected to any working network, try again</string>
    <string name="network_error1">Something went wrong, please try again</string>
    <string name="includefee">Include the Eventdex fee in to the total ticket price</string>
    <string name="excludefee">Add Eventdex fee on top of the total ticket price</string>
    <string name="infofrombuyer">Collect info from Buyers only</string>
    <string name="infofromattendee">Collect info from All Attendees</string>
    <string name="donotinfofromattendee">Do not collect Attendee info</string>
    <string name="action_settings">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="refund">Refund</string>
    <string name="save">Save</string>
    <string name="addtocart">BUY NOW</string>
    <string name="proceed">Proceed</string>
    <string name="placeorder">PAY NOW</string>
    <string name="scan_card">SCAN CARD</string>
    <string name="admin_payinfo">Payment options for Eventdex Fee</string>
    <string name="send">Send</string>
    <string name="forgot_pswd"><u> Forgot Password?</u></string>
    <string name="f_pswd">Forgot Password</string>
    <string name="signin_accout">Existing account?</string>
    <string name="fname_alert">First name is missing</string>
    <string name="lname_alert">Last name is missing</string>
    <string name="comp_alert">Company name is missing</string>
    <string name="phone_alert">Phone number is invalid</string>
    <string name="barcode_alert">Barcode ID is missing</string>
    <string name="email_alert">Email id is invalid</string>
    <string name="pswd_alert">Password should contains alteast 5 characters</string>
    <string name="pswd__invalid_alert">Password is invalid</string>
    <string name="pswd_email_alert">Password should not contain email id</string>
    <string name="pswd_fname_alert">Password should not be first name</string>
    <string name="pswd_lname_alert">Password should not be last name</string>
    <string name="pswd_specialchar_alert">Password should not contains special characters</string>
    <string name="zipcode_alert">Zip code is invalid</string>
    <string name="cardnumalert">Credit card number is invalid</string>
    <string name="expmonthalert">Expiry month is invalid</string>
    <string name="expyearalert">Expiry year is invalid</string>
    <string name="cvvalert">CVC number is invalid</string>
    <string name="salestaxvalue">Sales Tax Value</string>
    <string name="st_val_is">Your Selected Sales Tax is: 0.0%</string>
    <string name="note">Note:Sales tax will be applicable until and unless any one of them are selecte</string>
    <string name="event_name_alert">Event name is missing</string>
    <string name="event_date_alert">The end date and time should be greater than the start date and time</string>
    <string name="no_ticket">No Ticket Added Yet!\nPlease add the tickets Manually by selecting add icon on the right side.</string>
    <string name="no_statistics">No statistics found</string>
    <string name="no_attendee_impor">There are no attendees. Please add the attendees Manually OR Import from CSV in a dropbox by selecting the icon on the right hand corner.</string>
    <string name="no_attendee">Sorry...! No Attendees Found.</string>
    <string name="no_buyer">Sorry...! No Buyers Found.</string>
    <string name="no_order">Sorry...! No Orders Found.</string>
    <string name="tax_item">Items</string>
    <string name="tab_item">ITEM</string>
    <string name="tab_ticket">TICKET</string>
    <string name="add_event">Add Event</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="tickets">Tickets</string>
    <string name="fee">ScanAttendee Fee</string>
    <string name="list">Attendees</string>
    <string name="scan">Scan</string>
    <string name="offline_scan">Offline</string>
    <string name="orders">Orders</string>
    <string name="name">Name</string>
    <string name="email">Email ID</string>
    <string name="country">Country</string>
    <string name="ttlbytes">Total Bytes</string>
    <string name="ttlconbytes">Total Consume Bytes</string>
    <string name="deleteacc">Logout</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="noNetDevice">No Net Printer Found</string>
    <string name="eventdex_stripe_keys">Eventdex Stripe Keys</string>
    <string name="attendee">Attendee</string>
    <string name="checkin_only_msg">Already checked in. Check out is disabled.</string>
    <string name="double_side_badge">Double Side Badge</string>
    <string name="cloud_print">Google Cloud Printers</string>
    <string name="other_print">Other Printers</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Tickets</item>
        <item>List</item>
        <item>Scan</item>
        <item>Orders</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_ticket_cart">TicketCartActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_global_scan">GlobalScanActivity</string>
    <string name="title_activity_payment_setting">PaymentSetting</string>
    <string name="creditcard">Credit Card</string>
    <string name="extrn_pay">External Pay Gateway</string>
    <string name="cash">Cash</string>
    <string name="check">Check</string>
    <string name="trust_commerce">TrustCommerce</string>
    <string name="auth_net">Authorize.Net</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Stripe</string>
    <string name="paypal_adaptive">PayPal Adaptive</string>
    <string name="stripe_adaptive">Stripe Adaptive</string>
    <string name="paypal_direct">PayPal Direct</string>
    <string name="citrus_direct">Citrus Direct</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">MMYY</string>
    <string name="CVV2">CVV2</string>
    <string name="zip_code">ZIP</string>
    <string name="submit_button_text">Submit</string>
    <string name="swipe_card_menu_text">Swipe Card</string>
</resources>