<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/charge_card_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <!-- Edit Text for the card number -->

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/image_view_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/card_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="19"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <!-- Edit Text for the expiration date -->

        <EditText
            android:id="@+id/expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/card_number"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/image_view_border"
            android:gravity="center"
            android:hint="@string/expiration_date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLength="5"
            android:padding="10dp"
            android:textCursorDrawable="@null" />

        <!-- Edit Text for the CVV2 -->

        <EditText
            android:id="@+id/CVV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:layout_toRightOf="@id/expiration_date"
            android:background="@drawable/image_view_border"
            android:gravity="center"
            android:hint="@string/CVV2"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="4"
            android:padding="10dp"
            android:textCursorDrawable="@null" />

        <!-- Edit Text for the zipcode -->

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/card_number"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/question_mark"
            android:background="@drawable/image_view_border"
            android:gravity="center"
            android:hint="@string/zip_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:padding="10dp"
            android:textCursorDrawable="@null" />

        <View
            android:id="@+id/view_charge_card"
            android:layout_width="0.5dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/swipe_card_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip" />

        <!-- Swipe card button -->

        <Button
            android:id="@+id/swipe_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/view_charge_card"
            android:background="@drawable/button_bg"
            android:text="@string/swipe_card_menu_text"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:visibility="gone" />

        <!-- Submit button -->

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/view_charge_card"
            android:background="@drawable/button_bg"
            android:text="@string/submit_button_text"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:visibility="gone" />

        <!-- Helper button that is associated with the CVV2 -->

        <ImageButton
            android:id="@+id/question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/CVV2"
            android:layout_toRightOf="@id/CVV2"
            android:background="#00000000"
            android:src="@drawable/ic_question_mark" />
    </RelativeLayout>

</ScrollView>